# TermCade

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TermCade.py  build_cards.py  build_launcher.py  docker-compose.beta.yml  docker-compose.yml  dump_seed.py  eslint.config.js  main.py  make_icon.py  package-lock.json  package.json  pyproject.toml  requirements.txt  shoot_screens.py
.github/workflows/: ci.yml
docker/: entrypoint.sh
engine/termcade/: __init__.py  __main__.py  asset.py  beta.py  page.py  serve.py  session.py  web_driver.py
engine/termcade/app/: game.py
engine/termcade/core/: audio.py  journal.py  mixer.py  music.py  paths.py  rng.py  saves.py  settings.py  state.py
engine/termcade/ui/: app.py  theme.py  typography.py  work.py
engine/termcade/ui/screens/: base.py  console.py  dialog.py  log.py  menu.py  save_slot.py
engine/termcade/ui/theme/: engine.tcss
engine/termcade/ui/widgets/: __init__.py  button.py  panel.py  progress.py  tooltip.py
engine/termcade/web/: audio-bridge.js  autofit.js  back-button.css  back-button.js  beta-login.html  centre.css  deferred-terminal.js  full.html  meta-signal.js  refit-on-rotate.js  touch-gestures.js
engine/termcade/web/css/: theme.css  too-small.css
engine/termcade/web/html/: beta-login.html  full.html
engine/termcade/web/js/: no-virtual-keyboard.js  touch-gestures.js
games/xiaolin_showdown/: __init__.py  __main__.py  console.py  game.py  launch.py  music.py
games/xiaolin_showdown/data/: xs_game.db  xs_game.sql
games/xiaolin_showdown/logic/: __init__.py  actions.py  battle.py  bot.py  catalog.py  constants.py  duel.py  elements.py  lore.py  mechanics.py  models.py  outcome.py  power_effects.py  powers.py  settings.py  setup.py  state.py  temple_ai.py  training.py  turn.py  vault_ai.py  wear.py
games/xiaolin_showdown/logic/mechanics/: __init__.py  cards.py  powers.py  prize.py  resolve.py  scoring.py
games/xiaolin_showdown/lore/: 01-introduction.md  02-the-showdown.md  03-the-real-stakes.md  03-the-stakes.md  04-the-heroes.md  05-the-villains.md
games/xiaolin_showdown/screens/: __init__.py  _logo.py  base.py  character_select.py  deposit.py  detail.py  duel.py  duel_board.py  format.py  lookup.py  lore.py  outcome.py  rules.py  settings.py  start.py  temple.py  use_power.py  vault.py
games/xiaolin_showdown/theme/: xiaolin.tcss
tests/: conftest.py
tests/browser/: conftest.py  test_page_behaviour.py  test_page_errors.py  test_phone_landscape.py  test_refit.py  test_rotation.py  test_sound.py  test_touch_hover.py  test_touch_input.py
tests/engine/: test_asset.py  test_beta.py  test_browser_audio.py  test_serve.py  test_session.py  test_version.py
tests/engine/core/: conftest.py  test_audio.py  test_core_is_pure.py  test_journal.py  test_mixer.py  test_music.py  test_rng.py  test_saves.py  test_settings.py  test_settings_prune.py
tests/engine/ui/: conftest.py  test_boot.py  test_button_highlight.py  test_focus_key.py  test_footer_survives_rebuild.py  test_game_log.py  test_page_back_key.py  test_progress.py  test_screens.py  test_touch_back.py  test_worker_crash.py
tests/games/xiaolin_showdown/: conftest.py  factories.py  test_action_click.py  test_action_reasons.py  test_backgrounds.py  test_battle_has_a_winner.py  test_chase.py  test_console.py  test_duel.py  test_duel_board.py  test_duel_value.py  test_early_bird.py  test_flow.py  test_initiative_display.py  test_logic.py  test_lore.py  test_lore_screen.py  test_lost_and_found.py  test_music_toggle.py  test_named_stat.py  test_negation.py  test_powers.py  test_prize.py  test_prognosis.py  test_refresh.py  test_reveal.py  test_rules_screen.py  test_run_log.py  test_seed.py  test_settings_follow_the_pool.py  test_settings_save_stays_visible.py  test_short_names.py  test_showdown_invariants.py  test_soul_swap.py  test_start_fits_a_phone.py  test_temple_width.py  test_training.py  test_training_bar_width.py  test_turn.py  test_wager.py  (+4 more)
