[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termcade"
version = "0.0.1"
description = "Reusable Textual TUI engine for terminal games (engine = the cabinet, games = cartridges)."
requires-python = ">=3.12"
dependencies = ["textual>=0.80"]

[project.optional-dependencies]
# Browser mode. Pinned: serve.py patches textual-serve's page template, so its shape must be stable.
serve = ["textual-serve==1.1.3"]
dev = ["pytest", "pytest-asyncio", "textual-dev", "ruff", "mypy", "textual-serve==1.1.3"]
# Build the standalone double-click executable (see build_launcher.py).
build = ["pyinstaller>=6.0", "textual-serve==1.1.3"]

[project.scripts]
termcade = "termcade.__main__:main"
xiaolin = "xiaolin_showdown.__main__:main"
xiaolin-play = "xiaolin_showdown.launch:main"  # browser launcher: serve + auto-open, no terminal

# Monorepo: engine package + games as separate top-level packages in one wheel.
[tool.hatch.build.targets.wheel]
packages = ["engine/termcade", "games/xiaolin_showdown"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
# Core must stay clean; relax nothing here until it hurts.
warn_unused_ignores = true
warn_redundant_casts = true
