[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termcade"
version = "0.0.1"
description = "Reusable Textual TUI engine for terminal games (engine = the cabinet, games = cartridges)."
requires-python = ">=3.12"
dependencies = ["textual>=0.80"]

[project.optional-dependencies]
# Browser mode. Pinned: serve.py patches textual-serve's page template, so its shape must be stable.
serve = ["textual-serve==1.1.3"]
dev = ["pytest", "pytest-asyncio", "textual-dev", "ruff", "mypy", "textual-serve==1.1.3"]
# Build the standalone double-click executable (see build_launcher.py). Pillow is here rather than
# in the runtime deps because only `make_icon.py` needs it — the game never imports it.
build = ["pyinstaller>=6.0", "textual-serve==1.1.3", "pillow"]

[project.scripts]
termcade = "termcade.__main__:main"
xiaolin = "xiaolin_showdown.__main__:main"
xiaolin-play = "xiaolin_showdown.launch:main"  # browser launcher: serve + auto-open, no terminal

# Monorepo: engine package + games as separate top-level packages in one wheel.
[tool.hatch.build.targets.wheel]
packages = ["engine/termcade", "games/xiaolin_showdown"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# A test either exercises the rules or it drives the app. The second kind boots a real Textual
# app per test and costs ~50x the first, so it is marked and can be left out of a working loop:
#   pytest -m "not slow"   the rules, in about a second
#   pytest                 everything, before you commit
markers = ["slow: boots a real Textual app (screens, save/load, whole-game flows)"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
# Core must stay clean; relax nothing here until it hurts.
warn_unused_ignores = true
warn_redundant_casts = true
